objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Setup_Date__c</fullName>
        <label>Credit Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Juristic_Type__c</fullName>
        <label>Juristic Type</label>
        <picklist>
            <picklistValues>
                <fullName>จำนอง</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>